# llvm-project

clang/tools/: CMakeLists.txt
clang/tools/clang-check/: ClangCheck.cpp
clang/tools/clang-init/: CMakeLists.txt  FindClassDecls.cpp
clang/tools/clang-init/loop-convert/: LoopConvert.cpp
llvm/lib/Transforms/Scalar/: LoopFuse.cpp
